# job-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py  main.py
artifacts/: .gitkeep
collectors/: __init__.py  base.py  collector.py  http_client.py  planner.py
collectors/adapters/: __init__.py
config/: sources.yaml
configs/: preferences.yaml  seed_companies.yaml  sources.yaml  target_titles.yaml
core/: __init__.py  config.py  context.py  ids.py  verbose.py
docs/: ARCHITECTURE.md
evals/: __init__.py
evidence/: __init__.py  snapshot.py
notebooks/: test_checkpoint_a.ipynb  test_checkpoint_b.ipynb
orchestration/: __init__.py  runner.py
parsing/: __init__.py  llm.py  models.py  normalizers.py  parser.py  store.py
parsing/adapters/: __init__.py  base.py  careers_page.py
pipelines/: __init__.py  daily.py
pipelines/utils/: __init__.py  config_loader.py
schemas/: __init__.py  base.py  company.py  config.py  digest.py  favorite.py  feedback.py  role_lead.py  signal_event.py
storage/: __init__.py
